--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ margin-top: 20px;
 
 }
 
-.subdiv{background-color:rgba(0, 0, 0, 0.74);height:100%;width:80%;margin:0 auto;
+.subdiv{background-color:rgba(0, 0, 0, 0.74);height:auto;width:80%;margin:0 auto;
 
 }
 h3{text-align:center;color:antiquewhite;max-width: 500px;margin-left:auto;margin-right:auto;padding: 5px;
